폴더 기능 수정